fix: fix z-index button on the user page, deleted div element on the main page

--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -5,5 +5,6 @@
       bottom: 5%;
       right: 5%;
       opacity: .85;
+      z-index: 4;
     }
 }
